# async-graphql-dataloader-perf

./: Cargo.toml  README.md
src/: data.rs  main.rs
