[package]
name = "dataloader-performance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "6.0.6", features = ["dataloader"] }
async-graphql-axum = "6.0.6"
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
